[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "clprint"
version = "0.0.3"
authors = [
  { name="Latheesh V M", email="latheeshvmv@gmail.com" },
]
description = "A package to print colored text in terminal"
readme = "README.md"
requires-python = ">=3.0"
keywords = ["color", "print", "terminal", "clprint", "colorprint", "color-print"]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

